--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
   <header id="home" class="hero" aria-label="Featured gallery">
     <div class="slides" id="slides">
       <!-- Local photos -->
-      <div class="slide active" style="background-image:url('photos/hands.jpg');"></div>
-      <div class="slide" style="background-image:url('photos/kendall1.jpg');"></div>
+      <div class="slide active" style="background-image:url('photos/hands.JPG');"></div>
+      <div class="slide" style="background-image:url('photos/kendall1.JPG');"></div>
       <div class="slide" style="background-image:url('photos/peteelise1.JPG');"></div>
     </div>
 
