--- a/pricing.html
+++ b/pricing.html
@@ -54,7 +54,7 @@
   /* HERO BANNER */
   .hero{
     position:relative; height:58vh; min-height:420px; color:#fff; overflow:hidden;
-    background:url('photos/kendall6.jpg') center/cover no-repeat;
+    background:url('photos/kendall6.JPG') center/cover no-repeat;
   }
   .hero::after{ content:""; position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.22), rgba(0,0,0,.38)); }
   .hero-inner{ position:absolute; inset:0; display:grid; place-items:center; text-align:center; padding:0 16px; }
