--- a/pricing.html
+++ b/pricing.html
@@ -100,7 +100,7 @@
   <!-- NAV -->
   <nav class="nav">
     <div class="links">
-      <a href="index.html#home">Home</a>
+      <a href="index.html">Home</a>
       <a href="index.html#portfolio">Portfolio</a>
       <a href="pricing.html">Pricing</a>
     </div>
@@ -190,7 +190,7 @@
       <div>
         <a href="pricing.html">Pricing</a>
         <a href="index.html#portfolio">Portfolio</a>
-        <a href="index.html#home">Home</a>
+        <a href="index.html">Home</a>
       </div>
       <div class="center">
         <span class="foot-mark" aria-hidden="true">
